<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.ForumFragment">


        <LinearLayout
            android:id="@+id/welcome_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_herbamed" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.TitleMedium.Emphasized"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forum_title_herba" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.TitleMedium.Emphasized"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forum_title_med"
                        android:textColor="?attr/colorPrimary" />
                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_subtitle" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/info_wrapper_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="?attr/colorSecondaryContainer"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_wrapper">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.TitleSmall.Emphasized"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:accessibilityHeading="true"
                        android:text="@string/forum_share_title"
                        tools:targetApi="28" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.BodySmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forum_share_subtitle" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/scan_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_to_forum"
                    app:icon="@drawable/ic_plus"
                    app:iconGravity="textStart" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_posts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_wrapper_card"
            tools:listitem="@layout/item_post" />


        <com.google.android.material.loadingindicator.LoadingIndicator
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/loading"
            android:importantForAccessibility="yes"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
