<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ScanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        tools:context=".view.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/colorBackground"
                android:orientation="vertical"
                android:padding="18dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@null"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_circle_welcome" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/appTitleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/herbamed"
                            android:textColor="?attr/colorOnBackground"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance.Material3.TitleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scan_subtitle" />
                    </LinearLayout>
                </LinearLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/card2"
                        app:layout_constraintStart_toStartOf="parent"

                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:background="?attr/colorSurfaceContainer">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/scan_total"
                                android:textSize="11sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/totalScanTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                tools:text="0" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/card3"
                        app:layout_constraintStart_toEndOf="@+id/card1"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/colorSecondaryContainer"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/scan_herbal"
                                android:textAlignment="center"
                                android:textSize="11sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/herbalScanTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                tools:text="0" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/card2"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:background="?attr/colorErrorContainer">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/scan_nonherbal"
                                android:textAlignment="center"
                                android:textSize="11sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/nonHerbalScanTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                tools:text="0" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:contentPadding="17dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_place_holder_img"
                        android:orientation="vertical"
                        android:padding="1dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="226dp"
                            app:cardCornerRadius="16dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:id="@+id/plantImageView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/gambar_tanaman_yang_diambil"
                                android:scaleType="centerCrop"
                                android:src="@drawable/picture_placeholder" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/scanButton"
                    style="@style/Widget.Material3Expressive.Button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/scan_take_picture"
                    app:icon="@drawable/ic_camera"
                    app:iconGravity="textStart"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_gallery"
                    style="@style/Widget.Material3Expressive.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_upload_gallery"
                    app:icon="@drawable/ic_upload"
                    app:iconGravity="textStart" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/tips_card"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@null"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_info_circle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/scan_tips_title"
                            android:textSize="11sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scan_tips_1"
                            android:textSize="11sp"
                            android:textStyle="italic" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scan_tips_2"
                            android:textSize="11sp"
                            android:textStyle="italic" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/scan_tips_3"
                            android:textSize="11sp"
                            android:textStyle="italic" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
